--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "googleapis": "^128.0.0",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
