--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "googleapis": "^128.0.0",
     "next": "14.0.3",
     "react": "^18",
