--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-spinners": "^0.13.8",
     "zod": "^3.22.4"
   },
   "devDependencies": {
